# polars-hist-db

./: .buildinfo  .gitignore  .nojekyll  .pre-commit-config.yaml  Makefile  README.md  api.html  configuration.html  docker-compose.yaml  examples.html  genindex.html  index.html  mariadb.sql  mypy.ini  objects.inv  pyproject.toml  pytest.ini  readme.html  renovate.json  search.html  search.json  searchindex.js
.github/workflows/: build_python_wheel_pure.yml  build_quarto_docs.yaml  build_quarto_docs.yml  build_release_flow.yml  build_sphinx_docs.yml  build_uv_python_wheel_pure.yaml  build_uv_python_wheel_pure.yml  ci.yaml  publish_pypi.yml  publish_release.yml  publish_uv_pypi.yaml  publish_uv_pypi.yml  renovate.yml
_sources/: api.rst.txt  examples.rst.txt  index.rst.txt  readme.rst.txt
_sources/examples/: basic_example.nblink.txt
docs/: _quarto.yaml  api.qmd  configuration.qmd  examples.qmd  index.qmd  requirements.txt
docs/_site/: api.html  configuration.html  examples.html  index.html  search.json
docs/_site/examples/: basic_example.html  dataset_example.html  scratch.html
docs/_site/site_libs/bootstrap/: bootstrap-d06f9c6acd1f132114f10108f33f46f8.min.css  bootstrap-dark-8fe0669bdf3ec5ce7e2cb593d4a417b5.min.css
docs/source/: conf.py  configuration.rst
docs/source/examples/: dataset_example.nblink
examples/: basic_example.html  basic_example.ipynb  dataset_example.html  dataset_example.ipynb  scratch.html  scratch.ipynb
infra/: compose-mariadb.yml
notebooks/: scratch.ipynb
polars_db_engine/: types.py
polars_db_engine/config/: __init__.py  base_config.py  table.py
polars_db_engine/core/: dataframe.py  table.py
polars_db_engine/dataset/: extract_item.py  primary_item.py  scrape.py  workflow.py
polars_db_engine/loaders/: fn_registry.py
polars_hist_db/config/: __init__.py  config.py  dataset.py  delta_config.py  engine.py  fn_builtins.py  fn_registry.py  input_source.py  parser.py  parser_config.py  table.py  types.py
polars_hist_db/config/input/: input_source.py  jetstream_config.py
polars_hist_db/core/: audit.py  audit_log_tracker.py  dataframe.py  delta_table.py  table_config.py
polars_hist_db/dataset/: __init__.py  entrypoint.py  extract_item.py  foreign_key_helper.py  primary_item.py  scrape.py  workflow.py
polars_hist_db/loaders/: __init__.py  dsv_input_source.py  dsv_loader.py  fn_builtins.py  fn_registry.py  fn_transform.py  input_source.py  input_source_factory.py  jetstream_input_source.py
polars_hist_db/loaders/dsv/: dsv_loader.py  file_search.py
polars_hist_db/loaders/jetstream/: nats_client.py
polars_hist_db/utils/: __init__.py  compare.py  flatten.py  marshal.py
site_libs/bootstrap/: bootstrap-2c36bbfce53f1956e603474fb553de04.min.css  bootstrap-60513786f1c5ec0e94f054d6e0602542.min.css  bootstrap-dark-0fed5b6f2aa4df13d4def28b77c6b35e.min.css  bootstrap-dark-91db181cb5aa1a8c164a031d7bc5cf06.min.css
tests/: __init__.py  nats-server.conf  test_nats_streaming.py  utils.py
tests/_data/config/: all_col_types_defaults.yaml  all_col_types_nullable.yaml  foodprices.yaml  simple.yaml  simple_nontemporal.yaml  trading_pairs.yaml
tests/_data/dataset_config/: dataset_all_col_types_defaults.yaml  dataset_foodprices.yaml
tests/_data/dsv/: simple_01.csv
tests/_data/table_config/: table_all_col_types_nullable.yaml  table_cryptocurrencies.yaml
tests/_testdata_dataset_configs/: foodprices_dataset.yaml
tests/_testdata_dataset_data/: turkey_food_prices.json
tests/_testdata_table_configs/: all_col_types_defaults.yaml  all_col_types_nullable.yaml  cryptocurrency_config.yaml  exchange_config.yaml  simple_nontemporal_table.yaml  simple_table.yaml  trading_pairs_config.yaml
tests/audit/: test_search_files.py
tests/config/: test_engine.py
tests/dataset/: helpers.py  test_default_values.py  test_turkey_dataset.py  test_turkey_dsv.py  test_turkey_jetstream.py
tests/nats/: test_nats_jetstream.py  test_nats_streaming.py
tests/sql/: test_column_types.py  test_dataframe_join.py  test_dataframe_read.py  test_finality_disabled.py  test_finality_dropoff.py  test_foreign_keys.py  test_parser.py  test_system_versioning.py
tests/utils/: dsv_helper.py  nats_helper.py
