[project]
name = "polars-hist-db"
version = "0.8.27"
description = "(dsv,jetstream) --> dataframe <--> bitemporal-tables"
authors = [{ name = "jr200", email = "jayshan+git@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "nats-py>=2.14.0",
    "pandas>=2.3.3",
    "polars[sqlalchemy]>=1.39.2",
    "pyarrow>=23.0.1",
    "pymysql>=1.1.2",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "scandir-rs==2.8.0",
    "sql-metadata>=2.20.0",
    "sqlalchemy[asyncio]>=2.0.48",
]

[project.optional-dependencies]
sqlalchemy = ["polars[sqlalchemy]"]
nats = ["nats-py"]

[project.scripts]
scrape-dataset = "polars_hist_db.scripts.scrape_dataset:main"
drop-dataset-tables = "polars_hist_db.scripts.drop_dataset_tables:main"

[project.urls]
Repository = "https://github.com/jr200/polars-hist-db"

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "myst-parser>=4.0.1",
    "nbsphinx-link>=1.3.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.9",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "types-python-dateutil>=2.9.0.20250822",
    "types-pytz>=2025.2.0.20250326",
    "types-pyyaml>=6.0.12.20250822",
    "pyarrow-stubs>=20.0.0.20251107",
]

[tool.setuptools.package-data]
"polars_hist_db" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
log_cli = "true"
log_cli_level = "WARN"
# log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "tests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
