[project]
name = "polars-hist-db"
version = "0.10.0"
description = "(dsv,jetstream) --> dataframe <--> bitemporal-tables"
authors = [{ name = "jr200", email = "jayshan+git@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "nats-py>=2.14.0",
    "pandas>=2.3.3",
    "polars[sqlalchemy]>=1.39.3",
    "pyarrow>=23.0.1",
    "pymysql>=1.1.2",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "scandir-rs>=2.9.5",
    "sql-metadata>=2.20.0",
    "sqlalchemy[asyncio]>=2.0.48",
]

[project.optional-dependencies]
sqlalchemy = ["polars[sqlalchemy]"]
nats = ["nats-py"]

[project.urls]
Repository = "https://github.com/jr200/polars-hist-db"

[dependency-groups]
dev = [
    "coverage>=7.2.0",
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "quarto-cli",
    "ruff>=0.15.7",
    "types-python-dateutil>=2.9.0.20250822",
    "types-pytz>=2025.2.0.20250326",
    "types-pyyaml>=6.0.12.20250822",
    "pyarrow-stubs>=20.0.0.20251107",
]

[tool.setuptools.package-data]
"polars_hist_db" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
log_cli = "true"
log_cli_level = "WARN"
# log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "tests"
]

[tool.uv.sources]
quarto-cli = { git = "https://github.com/quarto-dev/quarto-cli", rev = "v1.9.31" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
